# side-project-cli-template

./: .gitignore  AGENTS.md  BUILD_INFO.md  Makefile  README.md  build.bat  build.sh  create_package.sh  main.py  pyproject.toml  side-project.spec
.github/workflows/: ci-cd.yml
side_project/: __init__.py  commands.py  config.py  main.py  utils.py
tools/: install.sh
